# design-patterns-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
abstract_factory/: Cargo.toml  main.rs  main_dyn.rs
abstract_factory/gui/: macos.rs  mod.rs  windows.rs
behavioral/: README.md
behavioral/chain-of-responsibility/: Cargo.toml  README.md  department.rs  main.rs  patient.rs
behavioral/chain-of-responsibility/department/: cashier.rs  doctor.rs  medical.rs  reception.rs
behavioral/command/: Cargo.toml  README.md  command.rs  main.rs
behavioral/command/command/: copy.rs  cut.rs  paste.rs
behavioral/iterator/: Cargo.toml  README.md  main.rs  users.rs
behavioral/mediator/: Cargo.toml  README.md  main.rs  train_station.rs
behavioral/mediator/mediator-rc-refcell/: Cargo.toml  README.md  main.rs  train_station.rs
behavioral/mediator/mediator-top-down/: Cargo.toml  README.md  train_station.rs
behavioral/mediator/trains/: mod.rs  passenger_train.rs
behavioral/memento/: Cargo.toml  README.md  conceptual.rs  serde.rs
behavioral/observer/: Cargo.toml  README.md  editor.rs  main.rs  observer.rs
behavioral/state/: Cargo.toml  README.md  main.rs  player.rs  state.rs
behavioral/strategy/: Cargo.toml  README.md  conceptual.rs  lambda.rs  main.rs
behavioral/template-method/: Cargo.toml  README.md  main.rs
behavioral/visitor/: Cargo.toml  README.md  main.rs  visitor.rs
builder/: Cargo.toml  classic.rs  main.rs  simple.rs
creational/: README.md
creational/abstract-factory/: Cargo.toml  README.md  main.rs  main_dyn.rs
creational/abstract-factory/app/: Cargo.toml  main.rs  render.rs
creational/abstract-factory/app-dyn/: Cargo.toml  main.rs  render.rs
creational/abstract-factory/gui/: Cargo.toml  lib.rs  macos.rs  mod.rs
creational/abstract-factory/macos-gui/: Cargo.toml  button.rs  checkbox.rs  factory.rs
creational/abstract-factory/windows-gui/: Cargo.toml  button.rs  checkbox.rs  factory.rs  lib.rs
creational/builder/: Cargo.toml  README.md  components.rs  director.rs  main.rs
creational/builder/builders/: car.rs  car_manual.rs  mod.rs
creational/builder/cars/: car.rs  manual.rs  mod.rs
creational/factory-method/: README.md
creational/factory-method/render-dialog-alternative/app/: Cargo.toml  init.rs  main.rs
creational/prototype/: Cargo.toml  README.md  main.rs
creational/simple-factory/: Cargo.toml  README.md  main.rs
creational/singleton/: Cargo.toml  README.md  lazy.rs  safe.rs
creational/singleton/how-to-create/: Cargo.toml  README.md  mutex.rs  once.rs
creational/static-creation-method/: Cargo.toml  README.md
factory_method/render_dialog/: main.rs
prototype/: main.rs
simple_factory/: Cargo.toml  main_dyn.rs
simple_factory/button/: mod.rs
singleton/: Cargo.toml  safe.rs
static_creation_method/: Cargo.toml  main.rs
structural/: README.md
structural/adapter/: Cargo.toml  README.md  adaptee.rs  adapter.rs  main.rs  target.rs
structural/bridge/: Cargo.toml  README.md  main.rs
structural/bridge/device/: mod.rs  (+2 more)
structural/composite/: Cargo.toml  README.md  main.rs
structural/decorator/: Cargo.toml  README.md  main.rs
structural/facade/: Cargo.toml  README.md  account.rs  ledger.rs  main.rs  notification.rs  security_code.rs  wallet.rs  wallet_facade.rs
structural/flyweight/: Cargo.toml  README.md  forest.rs  main.rs
structural/proxy/: Cargo.toml  README.md  main.rs  server.rs
(+54 files in other folders)
