[workspace]

members = [
  "creational/abstract-factory",
  "creational/builder",
  "creational/factory-method/maze-game",
  "creational/factory-method/render-dialog",
  "creational/prototype",
  "creational/simple-factory",
  "creational/singleton",
  "creational/static-creation-method",
  "structural/adapter",
  "structural/bridge",
  "structural/composite",
  "structural/decorator",
  "structural/facade",
  "structural/flyweight",
  "structural/proxy",
  "behavioral/chain-of-responsibility",
]
