[workspace]

members = [
  "behavioral/chain-of-responsibility",
  "behavioral/command",
  "behavioral/iterator",
  "behavioral/mediator/mediator-rc-refcell",
  "behavioral/mediator/mediator-top-down",
  "behavioral/memento",
  "behavioral/observer",
  "behavioral/state",
  "behavioral/strategy",
  "behavioral/template-method",
  "behavioral/visitor",
  "creational/abstract-factory/app",
  "creational/abstract-factory/app-dyn",
  "creational/builder",
  "creational/factory-method/maze-game",
  "creational/factory-method/render-dialog",
  "creational/prototype",
  "creational/simple-factory",
  "creational/singleton/how-to-create",
  "creational/singleton/logger",
  "creational/static-creation-method",
  "structural/adapter",
  "structural/bridge",
  "structural/composite",
  "structural/decorator",
  "structural/facade",
  "structural/flyweight",
  "structural/proxy",
]
