[package]
edition = "2021"
name = "singleton"
version = "0.1.0"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.15"

[[bin]]
name = "singleton-local"
path = "local.rs"

[[bin]]
name = "singleton-lazy"
path = "lazy.rs"

[[bin]]
name = "singleton-mutex"
path = "mutex.rs"

[[bin]]
name = "singleton-once"
path = "once.rs"
